centraliza texto no calendário

--- a/management/templates/management/events.html
+++ b/management/templates/management/events.html
@@ -32,7 +32,11 @@
 					<a href="{% url "management_events_edit" event.obj.pk %}">
 						<div class="schedule-event {{event.type}}"
 						     style="left: 0; right: 0; top: {{event.start_slot|mul:20}}px; height: {{event.slots|mul:20}}px;">
-							{{event.type_display}}
+							<div class="outer-container">
+								<div class="inner-container">
+									{{event.type_display}}
+								</div>
+							</div>
 						</div>
 					</a>
 				{% endfor %}
