--- a/website/static/production/css/app.css
+++ b/website/static/production/css/app.css
@@ -7035,3 +7035,16 @@ form img {
 .timeslots .schedule-timeslot {
   line-height: 20px;
 }
+
+.outer-container {
+  display: table;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.outer-container .inner-container {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
