--- a/website/templates/website/courses_details_include.html
+++ b/website/templates/website/courses_details_include.html
@@ -8,15 +8,10 @@
 			<div class="large-6 columns">
 				<a href="{% url "course_details" course.pk %}" data-reveal-id="course-modal" data-reveal-ajax="true">
 					<div class="course-callout panel">
-						<div class="row">
-							<div class="small-10 columns">
-								<h3>{{course.title}}<br>
-									<small>{{course.speaker.name}}</small></h3>
-							</div>
-							<div class="small-2 columns">
-								<div class="panel track-{{course.track}}"></div>
-							</div>
-						</div>
+						<h3>{{course.title}}<br>
+							<small>{{course.speaker.name}}</small>
+							<span class="label round track-{{course.track}}">Pacote {{course.get_track_display}}</span>
+						</h3>
 					</div>
 				</a>
 			</div>
