permite acessar eventos por urls com slugs
as urls dos eventos específicos (palestras, minicursos, outros) podem
agora ser acessadas com uma slug, pra ajudar na divulgação. por exemplo,
pode ter um minicurso com url /programacao/minicurso/2/titulo-do-curso.

se uma slug errada é usada, não tem problema, o que importa pra
encontrar o evento certo é o id que tem na url, e o usuário é
redirecionado pro endereço certo caso use algum errado, então não tem
problema caso a requisição venha com o link errado. redirecionar pro
link certo é uma tentativa de ajudar com SEO pro site, manter links com
o nome certo mas não depender do link completo caso alguém queira
compartilhar uma versão menor

--- a/website/templates/website/courses_details_include.html
+++ b/website/templates/website/courses_details_include.html
@@ -6,7 +6,7 @@
 	<div class="row">
 		{% for course in event.course_set.all %}
 			<div class="large-6 columns">
-				<a href="{% url "course_details" course.pk %}" data-reveal-id="course-modal" data-reveal-ajax="true">
+				<a href="{{course.get_absolute_url}}" data-reveal-id="course-modal" data-reveal-ajax="true">
 					<div class="course-callout panel">
 						<h3>{{course.title}}<br>
 							<small>{{course.speaker.name}}</small>
