faz EventData usar OneToOneField

--- a/website/templates/website/templatetags/render_schedule.html
+++ b/website/templates/website/templatetags/render_schedule.html
@@ -41,9 +41,7 @@
 									{% elif event.type == "coffee" %}
 										<strong>Coffee-break</strong>
 									{% else %}
-										{% for data in event.obj.eventdata_set.all %}
-											<strong>{{data.name}}</strong>
-										{% endfor %}
+										<strong>{{event.obj.eventdata.name}}</strong>
 									{% endif %}
 								</div>
 							</div>
