--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -70,7 +70,7 @@
 
             <div class="medium-4 columns">
               <h1>Dúvidas?</h1>
-              <button class="button expand">Contato & FAQ</button>
+              <a class="button expand" href="/contato">Contato & FAQ</a>
               <ul class="semcomp-contatos">
                 <li >Telefone 1: (16) 3373-9703</li>
                 <li>Telefone 2: (16) 3373-9686</li>
