Adiciona campo de foto ao forumlario de minicursos.

--- a/management/templates/management/courses_change.html
+++ b/management/templates/management/courses_change.html
@@ -25,6 +25,13 @@
         {% include "management/render_field.html" with field=course_form.title width="large-12" only %}
       </div>
       <div class="row">
+          <div class="medium-4 columns">
+            <img src="{{ course_form.photo.url|default:"http://placehold.it/200&text=Sem+Logo" }}" >
+          </div>
+
+          {% include "management/render_field.html" with field=course_form.photo width="medium-8 " only %}
+      </div>
+      <div class="row">
         {% include "management/render_field.html" with field=course_form.place width="large-6" only %}
         {% include "management/render_field.html" with field=course_form.track width="large-6" only %}
       </div>
