--- a/management/templates/management/courses_change.html
+++ b/management/templates/management/courses_change.html
@@ -26,7 +26,12 @@
       </div>
       <div class="row">
           <div class="medium-4 columns">
-            <img src="{{ course_form.photo.url|default:"http://placehold.it/200&text=Sem+Logo" }}" >
+            <img src=
+            {% if course_form.instance.photo %}
+            "{{ course_form.instance.photo.url }}"
+            {% else %}
+             "http://placehold.it/200&text=Sem+Logo" 
+             {% endif %} >
           </div>
 
           {% include "management/render_field.html" with field=course_form.photo width="medium-8 " only %}
