--- a/website/static/sass/app.scss
+++ b/website/static/sass/app.scss
@@ -366,4 +366,8 @@ a .schedule-event:hover {
             }
         }
     }
+    p {
+        text-align: justify;
+        text-indent: 2rem;
+    }
 }
