corrige bug: tentava acessar url de foto inexistente
se tenta acessar speaker.photo.url e o speaker.photo nao existe, lanca uma
excecao. pra nao cair nesse problema, testa primeiro se a foto existe e e
valida

--- a/website/templates/website/course_details_include.html
+++ b/website/templates/website/course_details_include.html
@@ -20,12 +20,14 @@
 		{% endif %}
 	</section>
 	{% if course.speaker %}
+	{% with speaker=course.speaker %}
 		<section class="medium-5 columns">
-			<h3>{{course.speaker.name}}<br>
-				<small>{{course.speaker.occupation}}</small></h3>
-			<img src={{course.speaker.photo.url}}>
-			{{course.speaker.bio|linebreaks}}
+			<h3>{{speaker.name}}<br>
+				<small>{{speaker.occupation}}</small></h3>
+			{% if speaker.photo %}<img src={{speaker.photo.url}}>{% endif %}
+			{{speaker.bio|linebreaks}}
 		</section>
+	{% endwith %}
 	{% endif %}
 </article>
 {% if request.is_ajax %}
