--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -9,15 +9,17 @@
 {% block base_content %}
 	<div class="row">
 		<div class="large-3 columns">
-			<ul class="side-nav">
-				<li {% if active_overview %}class="active"{% endif %}><a href="{% url "account_overview" %}"><i class="fa fa-fw fa-home"></i> {% trans "Visão geral" %}</a></li>
-				<li {% if active_payment %}class="active"{% endif %}><a href="{% url "account_payment" %}"><i class="fa fa-fw fa-usd"></i> {% trans "Pagamento" %}</a></li>
-				<li {% if active_courses %}class="active"{% endif %}><a href="{% url "account_courses" %}"><i class="fa fa-fw fa-pencil"></i> {% trans "Minicursos" %}</a></li>
-				<li><a href="{% url "logout" %}"><i class="fa fa-fw fa-sign-out"></i> {% trans "Sair" %}</a></li>
-				{% if user.is_staff %}
-					<li><a href="{% page_url "admin" %}"><i class="fa fa-fw fa-cog"></i> {% trans "Administração" %}</a></li>
-				{% endif %}
-			</ul>
+			<div class="panel">
+				<ul class="side-nav">
+					<li {% if active_overview %}class="active"{% endif %}><a href="{% url "account_overview" %}"><i class="fa fa-fw fa-home"></i> {% trans "Visão geral" %}</a></li>
+					<li {% if active_payment %}class="active"{% endif %}><a href="{% url "account_payment" %}"><i class="fa fa-fw fa-usd"></i> {% trans "Pagamento" %}</a></li>
+					<li {% if active_courses %}class="active"{% endif %}><a href="{% url "account_courses" %}"><i class="fa fa-fw fa-pencil"></i> {% trans "Minicursos" %}</a></li>
+					<li><a href="{% url "logout" %}"><i class="fa fa-fw fa-sign-out"></i> {% trans "Sair" %}</a></li>
+					{% if user.is_staff %}
+						<li><a href="{% page_url "admin" %}"><i class="fa fa-fw fa-cog"></i> {% trans "Administração" %}</a></li>
+					{% endif %}
+				</ul>
+			</div>
 		</div>
 		<div class="large-9 columns">
 			{% block user_content %}{% endblock %}
