--- a/website/static/sass/_settings.scss
+++ b/website/static/sass/_settings.scss
@@ -1091,10 +1091,15 @@ $default-float: left;
 
 // We use these to control link styles.
 
-// $side-nav-link-color: $primary-color;
-// $side-nav-link-color-active: lighten(#000, 30%);
+$menu-link-color-active: #333;
+$menu-link-color: #333;
+$side-nav-font-weight: bold;
+$side-nav-link-color: $menu-link-color;
+$side-nav-link-color-active: $menu-link-color-active;
+
+
+// $side-nav-link-color-active: lighten($primary-color, 30%);
 // $side-nav-font-size: em-calc(14);
-// $side-nav-font-weight: bold;
 
 // We use these to control border styles
 
