--- a/management/templates/management/places.html
+++ b/management/templates/management/places.html
@@ -2,28 +2,55 @@
 
 {% block user_content %}
 <div class="row">
-	<h1>Locais</h1>
-	<p>Aqui você pode editar locais onde acontecem as coisas da Semcomp, como
-	laboratórios, auditórios, E1, biblioteca etc.</p>
-	<p><strong>Nota:</strong> É necessário criar um local aqui antes de usá-lo
-	para algum evento.</p>
+  <h1>Locais</h1>
+  <p>Aqui você pode editar locais onde acontecem as coisas da Semcomp, como
+  laboratórios, auditórios, E1, biblioteca etc.</p>
+  <p><strong>Nota:</strong> É necessário criar um local aqui antes de usá-lo
+  para algum evento.</p>
 </div>
 <div class="row">
-	{% for place in places %}
-		<div class="large-4 columns">
-			<div class="panel">
-				<div class="row">
-					<p class="large-8 columns">{{place.name}}</p>
-					<div class="large-4 columns">
-						<a title="Editar" href="{% url "management_places_edit" place.pk %}"><i class="fa fa-edit"></i></a>
-						<a title="Apagar" href="{% url "management_places_delete" place.pk %}"><i class="fa fa-eraser"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	{% endfor %}
-	<div class="large-4 columns">
-		<a class="large button expand" href="{% url "management_places_add" %}"><i class="fa fa-plus"></i> Adicionar local</a>
-	</div>
+  <div class="large-12 columns">
+    <table class="management-table">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Mapa estático</th>
+          <th>Apagar</th>
+          <th>Editar</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for place in places %}
+          <tr>
+            <td>{{place.name}}</td>
+            <td>
+              {% if place.static_map %}
+                <a href="#" data-reveal-id="static-map-modal-{{place.pk}}">
+                  <div class="crop-static-map">
+                    <img class="static-map-management" src="{{place.static_map.url}}">
+                  </div>
+                </a>
+              {% else %}
+                <span class="alert-box alert">Sem mapa estático, editar para criar</span>
+              {% endif %}
+            </td>
+            <td><a title="Apagar" class="button alert" href="{% url "management_places_delete" place.pk %}"><i class="fa fa-eraser"></i> Apagar</a></td>
+            <td><a title="Editar" class="button" href="{% url "management_places_edit" place.pk %}"><i class="fa fa-edit"></i> Editar</a></td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  <div class="large-12 columns">
+    <a class="large button expand" href="{% url "management_places_add" %}"><i class="fa fa-plus"></i> Adicionar local</a>
+  </div>
 </div>
+{% for place in places %}
+  {% if place.static_map %}
+    <div id="static-map-modal-{{place.pk}}" class="reveal-modal text-center tiny" data-reveal>
+      <img src="{{place.static_map.url}}">
+      <a class="close-reveal-modal">&#215;</a>
+    </div>
+  {% endif %}
+{% endfor %}
 {% endblock %}
