melhora a exibição da página de locais
melhorias:
	* mostra o mapa atual, uma miniatura que pode ser exibida dentro
	  de um modal quando clica
	* tabela com todos os dados ao invés de "paineis" feios
	* converte a imagem pra modo de paleta antes de salvar, pra
	  reduzir o tamanho
	* usa transparência no mapa corretamente

--- a/website/static/css/app.css
+++ b/website/static/css/app.css
@@ -7077,5 +7077,21 @@ a .schedule-event:hover {
 }
 
 #add-place-map {
-  height: 380px;
+  height: 280px;
+}
+
+.management-table {
+  width: 100%;
+}
+
+.crop-static-map {
+  width: 256px;
+  height: 55px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.static-map-management {
+  height: 256px;
+  margin-top: -100.5px;
 }
