--- a/website/static/production/css/app.css
+++ b/website/static/production/css/app.css
@@ -7077,5 +7077,21 @@ a .schedule-event:hover {
 }
 
 #add-place-map {
-  height: 380px;
+  height: 280px;
+}
+
+.management-table {
+  width: 100%;
+}
+
+.crop-static-map {
+  width: 256px;
+  height: 55px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.static-map-management {
+  height: 256px;
+  margin-top: -100.5px;
 }
